# kaggle-otto-recommender-system

./: .gitignore  README.md  pyproject.toml  run.sh
notebook/analysis/: nb001_make_dataset.ipynb  nb002_simple_eda.ipynb
notebook/analysis/.ipynb_checkpoints/: nb001_make_dataset-checkpoint.ipynb
notebook/exp/: exp001_aid_freq_baseline.ipynb  exp002_co_occurance_balise.ipynb  exp003_co_visitation_matrix.ipynb  exp004_compare_co_visitation_matrix.ipynb  exp006_type_co_visitation.ipynb  exp007_cudf_cv_baseline.ipynb  exp008.ipynb  exp009.ipynb  exp010.ipynb  exp011.ipynb  exp012.ipynb
notebook/exp/.ipynb_checkpoints/: exp005_fast_co_visitation_matrix-checkpoint.ipynb  exp006_type_co_visitation-checkpoint.ipynb  exp007_cudf_cv_baseline-checkpoint.ipynb
