[tool.poetry]
name = "otto-recommender-system"
version = "0.1.0"
description = ""
authors = ["azupero_adolph <azupero.adolph@gmail.com>"]
readme = "README.md"
packages = [{include = "otto_recommender_system"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
plotly = "^5.11.0"
jupyterlab = "^3.5.0"
scikit-learn = "^1.1.3"
tqdm = "^4.64.1"
pyarrow = "^10.0.0"
ipywidgets = "7.7.1"
wandb = "^0.13.5"
matplotlib-venn = "^0.11.7"
gensim = "^4.2.0"
lightgbm = "^3.3.3"
ray = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
